updated about us page and also and fixed overlapping contents

--- a/src/index.css
+++ b/src/index.css
@@ -52,8 +52,13 @@ body {
   display: flex;
   align-items: center;
 }
-
+.logo-box{
+  padding: 0.625rem;
+  border-radius: 100%;
+}
 .company-logo {
+  padding: 0.125rem;
+  border-radius: 100%;
   height: 60px; /* Adjust logo size */
   margin-right: 10px; /* Space between logo and title */
 }
@@ -274,6 +279,8 @@ p.lead {
 }
 
 /* About-us page */
+
+
 /* .circle {
   width: 100%;
   height: 100%;
@@ -320,13 +327,37 @@ p.lead {
   font-size: medium;
 }
 
+/* Our Company */
+
+
+
+#our-company {
+  font-family: "Space Grotesk", sans-serif;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  
+}
+.section-primary{
+  padding: 2rem;
+  margin-bottom: 2rem;
+}
+#value-content h2{
+  padding: 0.625rem;
+  margin-top: 2rem;
+}
+.img-box img{
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
 /* Careers */
 #careers{
   font-family: "Space Grotesk", sans-serif ;
   justify-content: center;
   align-items: center;
   width: 80%;
-  
   padding: 2rem;
 }
 #careers-title{
